[tool.poetry]
name = "utilities"
version = "0.1.0"
description = ""
authors = ["stryig0033 <000stryig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
